# dpcrypto

./: Cargo.toml  README.md
src/: error.rs  lib.rs
src/shannon_cipher/: additive_one_time_pad.rs  mod.rs  one_time_pad.rs  substitution_cipher.rs  variable_length_one_time_pad.rs
src/utils/: mod.rs
tests/: integration_test.rs  shannon_ciphers.rs
