[package]
name = "dpcrypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.0"
itertools = "0.10.3"
rand = "0.8.5"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
base64 = "0.13"